# playground_scheidt_bachmann

./: .clang-format  .gitignore  CMakeLists.txt  README.md  bbuild.bat  bbuild.sh  notes.md  notes.txt  rebuild.bat  rebuild.sh
chapter_00/: CMakeLists.txt
chapter_00/doc/: presentation.md  slideshow.adoc  test_tex
chapter_00/src/: main.cpp
chapter_00/tst/: dummy_test_gtest.cpp  unit_test.cpp
chapter_00_classes_intro/doc/: slideshow.md
chapter_00_temp/tst/: dummy_test_gtest.cpp
chapter_00_temp01/: CMakeLists.txt
chapter_00_temp01/tst/: dummy_test_gtest.cpp
chapter_01_classes_intro/: CMakeLists.txt
chapter_01_classes_intro/doc/: slideshow.md  slideshow_01_class_intro.md
chapter_01_classes_intro/src/: main.cpp
chapter_01_rule_of_5/doc/: slideshow.md
chapter_01_rule_of_5/inc/: swCopyCtorProper.hpp  swFull.hpp
chapter_01_rule_of_5/src/: main.cpp
chapter_01_rule_of_5/tst/: swCopyCtorMissing.cpp  swCopyCtorProper.cpp
chapter_05_rule_of_5/: CMakeLists.txt
chapter_05_rule_of_5/inc/: sw.hpp  swCopyCtorMissing.hpp  swCopyCtorProper.hpp
chapter_05_rule_of_5/tst/: swCopyCtorMissing.cpp
chapter_edu_01_classes_intro/: CMakeLists.txt
chapter_edu_01_classes_intro/doc/: slideshow_01_class_intro.md
chapter_edu_01_classes_intro/src/: main.cpp
chapter_edu_02_special_member_functions/: CMakeLists.txt
chapter_edu_02_special_member_functions/doc/: slideshow_02_special_member_functions.md
chapter_edu_02_special_member_functions/inc/: PointerWrapper.hpp  RuleOfFive.hpp  RuleOfThree.hpp  RuleOfZero.hpp  exampleLogger.hpp  examplePolymorphism.hpp
chapter_edu_02_special_member_functions/src/: main.cpp
chapter_edu_03_containers/: CMakeLists.txt
chapter_edu_03_containers/doc/: presentation.md  slideshow_marp.md
chapter_lab_05_rule_of_5/inc/: sw.hpp  swCopyCtorMissing.hpp  swFull.hpp
chapter_lab_05_rule_of_5/src/: main.cpp
chapter_lab_05_rule_of_5/tst/: sw.cpp
tools/: memoryAnalyzer.hpp
